--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,7 +50,10 @@ Table OF Contents
 /*=========================================================
 	01 -> GENERAL
 ===========================================================*/
-
+.product-preview {
+    margin: 0 5px; /* Thêm khoảng cách giữa các hình */
+    padding: 5px; /* Thêm padding để border không bị cắt */
+}
 /*----------------------------*\
 	Typography
 \*----------------------------*/
@@ -789,7 +792,7 @@ textarea.input {
   padding: 60px 0px;
   margin: 30px 0px;
   background-color: #E4E7ED;
-  background-image: url('../../public/img/hotdeal.png');
+  background-image: url('../img/hotdeal.png');
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -1402,7 +1405,7 @@ textarea.input {
   -webkit-transform: translateX(15px);
   -ms-transform: translateX(15px);
   transform: translateX(15px);
-  right: 15px;
+  
 }
 
 #product-main-img .slick-prev, #product-main-img .slick-next {
