--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,14 @@ Table OF Contents
     margin: 0 5px; /* Thêm khoảng cách giữa các hình */
     padding: 5px; /* Thêm padding để border không bị cắt */
 }
+/* .slick-slide > div {
+  border-right: 1px solid #000;
+  
+}
+.slick-slide > div:hover {
+  border-right: 1px solid #ff0000;
+  
+} */
 /*----------------------------*\
 	Typography
 \*----------------------------*/
@@ -1428,14 +1436,14 @@ textarea.input {
 }
 
 #product-imgs .product-preview {
-  margin: 0px 5px;
+  margin: 0px;
   border: 1px solid #E4E7ED;
 }
-
-#product-imgs .product-preview.slick-current {
-  border-color: #D10024;
+#product-imgs .product-preview:focus-visible {
+  margin: 0px;
+  border: 2px solid #000;
+  z-index: 99;
 }
-
 #product-imgs .slick-prev {
   top: -20px;
   left: 50%;
