--- a/public/css/PriceRangeSlider.css
+++ b/public/css/PriceRangeSlider.css
@@ -28,8 +28,8 @@
     width: 100%;
     height: 100%;
     outline: none;
-    font-size: 12px;
-    margin-left: 6px;
+    font-size: 10px;
+    margin-left: 0;
     padding: 0 10px;
     border-radius: 5px;
     text-align: center;
