--- a/public/css/PriceRangeSlider.css
+++ b/public/css/PriceRangeSlider.css
@@ -16,7 +16,7 @@
   .price-input {
     width: 100%;
     display: flex;
-    margin: 30px 0   35px;
+    margin: 30px 0 35px;
   }
   .price-input .field {
     display: flex;
@@ -28,14 +28,16 @@
     width: 100%;
     height: 100%;
     outline: none;
-    font-size: 10px;
-    margin-left: 0;
-    padding: 0 10px;
+    font-size: 8px;
+    margin-left: 0px;
+    padding: 0 0;
     border-radius: 5px;
     text-align: center;
     border: 1px solid #999;
     -moz-appearance: textfield;
+    box-sizing: border-box;
   }
+  
   input[type="number"]::-webkit-outer-spin-button,
   input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -90,4 +92,7 @@
     pointer-events: auto;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
   }
-  
+  .input-min.error, .input-max.error {
+    border: 2px solid red !important;
+    background-color: #ffe6e6 !important;
+  }
