--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,11 +51,69 @@ Table OF Contents
 	01 -> GENERAL
 ===========================================================*/
 .product-preview {
-    margin: 0 5px; /* Thêm khoảng cách giữa các hình */
-    padding: 5px; /* Thêm padding để border không bị cắt */
+  margin: 0 5px;
+  /* Thêm khoảng cách giữa các hình */
+  padding: 5px;
+  /* Thêm padding để border không bị cắt */
 }
+
 .product-img img {
   transition: all 0.3s ease;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* Hiển thị 2 cột */
+  gap: 10px;
+  /* Khoảng cách giữa các sản phẩm */
+}
+
+.product-item {
+  width: 100%;
+  /* Đảm bảo sản phẩm chiếm hết chiều rộng của cột */
+}
+
+@media (max-width: 480px) {
+  .product-grid {
+    grid-template-columns: repeat(2, 1fr);
+    /* 2 sản phẩm trên một hàng */
+  }
+}
+
+.slider-container {
+  position: relative;
+}
+
+.custom-prev-btn, .custom-next-btn {
+  position: absolute;
+  top: 50%;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background: #fff;
+  transform: translateY(-50%);
+  border: 1px solid #e4e7ed;;
+  color: #000;
+  cursor: pointer;
+  z-index: 99;
+}
+
+.custom-prev-btn {
+  left: -5px;
+}
+
+.custom-next-btn {
+  right: -5px;
+}
+
+.custom-prev-btn:hover, .custom-next-btn:hover {
+  background: #ef233c;
+  color: #fff;
+}
+
+.marginBottom{
+  margin-bottom: 50px;
 }
 
 /* .slick-slide > div {
@@ -76,7 +134,12 @@ body {
   color: #333;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #2B2D42;
   font-weight: 700;
   margin: 0 0 10px;
@@ -89,13 +152,15 @@ a {
   transition: 0.2s color;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: #D10024;
   text-decoration: none;
   outline: none;
 }
 
-ul, ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
   list-style: none
@@ -119,7 +184,8 @@ ul, ol {
   transition: 0.2s all;
 }
 
-.primary-btn:hover, .primary-btn:focus {
+.primary-btn:hover,
+.primary-btn:focus {
   opacity: 0.9;
   color: #FFF;
 }
@@ -145,11 +211,12 @@ textarea.input {
 
 /*-- Number input --*/
 
-.input-number{
+.input-number {
   position: relative;
 }
 
-.input-number input[type="number"]::-webkit-inner-spin-button, .input-number input[type="number"]::-webkit-outer-spin-button {
+.input-number input[type="number"]::-webkit-inner-spin-button,
+.input-number input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
@@ -163,7 +230,8 @@ textarea.input {
   padding: 0px 35px 0px 15px;
 }
 
-.input-number .qty-up, .input-number .qty-down {
+.input-number .qty-up,
+.input-number .qty-down {
   position: absolute;
   display: block;
   width: 20px;
@@ -191,7 +259,8 @@ textarea.input {
   border-bottom-right-radius: 5px;
 }
 
-.input-number .qty-up:hover, .input-number .qty-down:hover {
+.input-number .qty-up:hover,
+.input-number .qty-down:hover {
   background-color: #E4E7ED;
   color: #D10024;
 }
@@ -207,18 +276,23 @@ textarea.input {
 
 /*-- checkbox & radio input --*/
 
-.input-radio, .input-checkbox {
+.input-radio,
+.input-checkbox {
   position: relative;
   display: block;
 }
 
-.input-radio input[type="radio"]:not(:checked), .input-radio input[type="radio"]:checked, .input-checkbox input[type="checkbox"]:not(:checked), .input-checkbox input[type="checkbox"]:checked {
+.input-radio input[type="radio"]:not(:checked),
+.input-radio input[type="radio"]:checked,
+.input-checkbox input[type="checkbox"]:not(:checked),
+.input-checkbox input[type="checkbox"]:checked {
   position: absolute;
   margin-left: -9999px;
   visibility: hidden;
 }
 
-.input-radio label, .input-checkbox label {
+.input-radio label,
+.input-checkbox label {
   font-weight: 500;
   min-height: 20px;
   padding-left: 20px;
@@ -226,7 +300,8 @@ textarea.input {
   cursor: pointer;
 }
 
-.input-radio input[type="radio"]+label span, .input-checkbox input[type="checkbox"]+label span {
+.input-radio input[type="radio"]+label span,
+.input-checkbox input[type="checkbox"]+label span {
   position: absolute;
   left: 0px;
   top: 4px;
@@ -272,7 +347,8 @@ textarea.input {
   transition: all 0.2s;
 }
 
-.input-radio input[type="radio"]:checked+label span, .input-checkbox input[type="checkbox"]:checked+label span {
+.input-radio input[type="radio"]:checked+label span,
+.input-checkbox input[type="checkbox"]:checked+label span {
   background-color: #D10024;
   border-color: #D10024;
 }
@@ -291,7 +367,8 @@ textarea.input {
   transform: scale(1);
 }
 
-.input-radio .caption, .input-checkbox .caption {
+.input-radio .caption,
+.input-checkbox .caption {
   margin-top: 5px;
   max-height: 0;
   overflow: hidden;
@@ -299,7 +376,8 @@ textarea.input {
   transition: 0.3s max-height;
 }
 
-.input-radio input[type="radio"]:checked~.caption, .input-checkbox input[type="checkbox"]:checked~.caption {
+.input-radio input[type="radio"]:checked~.caption,
+.input-checkbox input[type="checkbox"]:checked~.caption {
   max-height: 800px;
 }
 
@@ -360,7 +438,9 @@ textarea.input {
   color: #D10024;
 }
 
-.section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
+.section-tab-nav li a:hover:after,
+.section-tab-nav li a:focus:after,
+.section-tab-nav li.active a:after {
   width: 100%;
 }
 
@@ -653,7 +733,9 @@ textarea.input {
   padding: 20px 0px;
 }
 
-.main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
+.main-nav>li>a:hover,
+.main-nav>li>a:focus,
+.main-nav>li.active>a {
   color: #D10024;
   background-color: transparent;
 }
@@ -668,7 +750,9 @@ textarea.input {
   transition: 0.2s all;
 }
 
-.main-nav>li>a:hover:after, .main-nav>li>a:focus:after, .main-nav>li.active>a:after {
+.main-nav>li>a:hover:after,
+.main-nav>li>a:focus:after,
+.main-nav>li.active>a:after {
   width: 100%;
 }
 
@@ -684,6 +768,7 @@ textarea.input {
   .header-ctn .menu-toggle {
     display: inline-block;
   }
+
   #responsive-nav {
     position: fixed;
     left: 0;
@@ -701,23 +786,28 @@ textarea.input {
     -webkit-transition: 0.2s all;
     transition: 0.2s all;
   }
+
   #responsive-nav.active {
     -webkit-transform: translateX(0%);
     -ms-transform: translateX(0%);
     transform: translateX(0%);
     width: 100%;
   }
+
   .main-nav {
     margin: 0px;
     float: none;
   }
+
   .main-nav>li {
     display: block;
     float: none;
   }
+
   .main-nav>li+li {
     margin-left: 0px;
   }
+
   .main-nav>li>a {
     padding: 15px;
     color: #FFF;
@@ -886,6 +976,7 @@ textarea.input {
 .product .product-img {
   position: relative;
 }
+
 .product .product-img>img {
   width: 100%;
   height: 170px;
@@ -895,14 +986,14 @@ textarea.input {
   position: absolute;
   top: 15px;
   right: 15px;
-  
+
 }
 
 .product .product-img .product-label>span {
   border: 2px solid;
   padding: 2px 10px;
   font-size: 12px;
-  
+
 }
 
 .product .product-img .product-label>span.sale {
@@ -940,7 +1031,8 @@ textarea.input {
   font-weight: 700;
 }
 
-.product .product-body .product-name>a:hover, .product .product-body .product-name>a:focus {
+.product .product-body .product-name>a:hover,
+.product .product-body .product-name>a:focus {
   color: #D10024;
 }
 
@@ -1011,9 +1103,9 @@ textarea.input {
   -webkit-transform: translate(-50%, -15px);
   -ms-transform: translate(-50%, -15px);
   transform: translate(-50%, -15px);
-  width: 150px;
-  padding: 10px;
-  font-size: 12px;
+  width: 80px;
+  padding: 5px;
+  font-size: 6pt;
   line-height: 10px;
   background: #1e1f29;
   color: #FFF;
@@ -1068,7 +1160,7 @@ textarea.input {
   border-radius: 40px;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
-  
+  font-size: 10px;
 }
 
 .product .add-to-cart .add-to-cart-btn>i {
@@ -1088,6 +1180,7 @@ textarea.input {
   color: #D10024;
   border-color: #D10024;
   padding: 0px 30px 0px 50px;
+  font-size: 10px;
 }
 
 .product .add-to-cart .add-to-cart-btn:hover>i {
@@ -1138,7 +1231,8 @@ textarea.input {
   font-weight: 700;
 }
 
-.product-widget .product-body .product-name>a:hover, .product-widget .product-body .product-name>a:focus {
+.product-widget .product-body .product-name>a:hover,
+.product-widget .product-body .product-name>a:focus {
   color: #D10024;
 }
 
@@ -1208,7 +1302,8 @@ textarea.input {
   z-index: 10;
 }
 
-.products-slick-nav .slick-prev, .products-slick-nav .slick-next {
+.products-slick-nav .slick-prev,
+.products-slick-nav .slick-next {
   position: static;
   -webkit-transform: none;
   -ms-transform: none;
@@ -1219,7 +1314,8 @@ textarea.input {
   margin: 0px 2px;
 }
 
-.products-slick-nav .slick-prev:before, .products-slick-nav .slick-next:before {
+.products-slick-nav .slick-prev:before,
+.products-slick-nav .slick-next:before {
   font-size: 14px;
 }
 
@@ -1247,11 +1343,13 @@ textarea.input {
   margin-top: 10px;
 }
 
-.checkbox-filter .input-radio label, .checkbox-filter .input-checkbox label {
+.checkbox-filter .input-radio label,
+.checkbox-filter .input-checkbox label {
   font-size: 12px;
 }
 
-.checkbox-filter .input-radio label small, .checkbox-filter .input-checkbox label small {
+.checkbox-filter .input-radio label small,
+.checkbox-filter .input-checkbox label small {
   color: #8D99AE;
 }
 
@@ -1289,7 +1387,8 @@ textarea.input {
   border-radius: 50%;
 }
 
-.noUi-handle:before, .noUi-handle:after {
+.noUi-handle:before,
+.noUi-handle:after {
   display: none;
 }
 
@@ -1423,17 +1522,19 @@ textarea.input {
   -webkit-transform: translateX(15px);
   -ms-transform: translateX(15px);
   transform: translateX(15px);
-  
+
 }
 
-#product-main-img .slick-prev, #product-main-img .slick-next {
+#product-main-img .slick-prev,
+#product-main-img .slick-next {
   opacity: 0;
   visibility: hidden;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
 
-#product-main-img:hover .slick-prev, #product-main-img:hover .slick-next {
+#product-main-img:hover .slick-prev,
+#product-main-img:hover .slick-next {
   -webkit-transform: translateX(0%);
   -ms-transform: translateX(0%);
   transform: translateX(0%);
@@ -1449,11 +1550,13 @@ textarea.input {
   margin: 0px;
   border: 1px solid #E4E7ED;
 }
+
 #product-imgs .product-preview:focus-visible {
   margin: 0px;
   border: 2px solid #000;
   z-index: 99;
 }
+
 #product-imgs .slick-prev {
   top: -20px;
   left: 50%;
@@ -1480,7 +1583,7 @@ textarea.input {
 
 .product-preview img {
   width: 100%;
-  
+
 }
 
 /*----------------------------*\
@@ -1684,7 +1787,9 @@ textarea.input {
   transition: 0.2s all;
 }
 
-#product-tab .tab-nav li a:hover:after, #product-tab .tab-nav li a:focus:after, #product-tab .tab-nav li.active a:after {
+#product-tab .tab-nav li a:hover:after,
+#product-tab .tab-nav li a:focus:after,
+#product-tab .tab-nav li.active a:after {
   width: 100%;
 }
 
@@ -1700,15 +1805,18 @@ textarea.input {
   margin-left: 10px;
 }
 
-.rating-avg .rating-stars, .rating .rating-stars {
+.rating-avg .rating-stars,
+.rating .rating-stars {
   display: inline-block;
 }
 
-.rating-avg .rating-stars>i, .rating .rating-stars>i {
+.rating-avg .rating-stars>i,
+.rating .rating-stars>i {
   color: #E4E7ED;
 }
 
-.rating-avg .rating-stars>i.fa-star, .rating .rating-stars>i.fa-star {
+.rating-avg .rating-stars>i.fa-star,
+.rating .rating-stars>i.fa-star {
   color: #D10024;
 }
 
@@ -1850,11 +1958,13 @@ textarea.input {
   transition: 0.2s all;
 }
 
-.review-form .input-rating .stars>label:hover:before, .review-form .input-rating .stars>label:hover~label:before {
+.review-form .input-rating .stars>label:hover:before,
+.review-form .input-rating .stars>label:hover~label:before {
   color: #D10024;
 }
 
-.review-form .input-rating .stars>input:checked label:before, .review-form .input-rating .stars>input:checked~label:before {
+.review-form .input-rating .stars>input:checked label:before,
+.review-form .input-rating .stars>input:checked~label:before {
   content: "\f005";
   color: #D10024;
 }
@@ -2014,7 +2124,8 @@ textarea.input {
   transition: 0.2s all;
 }
 
-.newsletter .newsletter-follow li a:hover, .newsletter .newsletter-follow li a:focus {
+.newsletter .newsletter-follow li a:hover,
+.newsletter .newsletter-follow li a:focus {
   background-color: #E4E7ED;
   color: #D10024;
 }
@@ -2087,7 +2198,8 @@ textarea.input {
 	Arrows
 \*----------------------------*/
 
-.slick-prev, .slick-next {
+.slick-prev,
+.slick-next {
   width: 40px;
   height: 40px;
   border: 1px solid #E4E7ED;
@@ -2098,12 +2210,16 @@ textarea.input {
   transition: 0.2s all;
 }
 
-.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
   background-color: #D10024;
   border-color: #D10024;
 }
 
-.slick-prev:before, .slick-next:before {
+.slick-prev:before,
+.slick-next:before {
   font-family: FontAwesome;
   color: #2B2D42;
 }
@@ -2116,7 +2232,10 @@ textarea.input {
   content: "\f105";
 }
 
-.slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before {
+.slick-prev:hover:before,
+.slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
   color: #FFF;
 }
 
@@ -2132,7 +2251,9 @@ textarea.input {
 	Dots
 \*----------------------------*/
 
-.slick-dots li, .slick-dots li button, .slick-dots li button:before {
+.slick-dots li,
+.slick-dots li button,
+.slick-dots li button:before {
   width: 10px;
   height: 10px;
 }
@@ -2163,24 +2284,30 @@ textarea.input {
   #top-header .header-links.pull-left {
     float: none !important;
   }
+
   #top-header .header-links.pull-right {
     float: none !important;
     margin-top: 5px;
   }
+
   .header-logo {
     float: none;
     text-align: center;
   }
+
   .header-logo .logo {
     display: inline-block;
   }
+
   #product-imgs {
     margin-bottom: 60px;
     margin-top: 15px;
   }
+
   #rating {
     text-align: center;
   }
+
   #reviews {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -2192,6 +2319,7 @@ textarea.input {
     float: none;
     margin-top: 10px;
   }
+
   .section-tab-nav li {
     margin-top: 10px;
   }
@@ -2201,10 +2329,12 @@ textarea.input {
   [class*='col-xs'] {
     width: 100%;
   }
+
   .store-grid {
     float: none;
     margin-top: 10px;
   }
+
   .store-pagination {
     float: none;
     margin-top: 10px;
