đã thêm api cho category và related

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,6 +114,7 @@ Table OF Contents
 
 .marginBottom{
   margin-bottom: 50px;
+  padding: 0 0 20 20;
 }
 
 /* .slick-slide > div {
@@ -1103,9 +1104,9 @@ textarea.input {
   -webkit-transform: translate(-50%, -15px);
   -ms-transform: translate(-50%, -15px);
   transform: translate(-50%, -15px);
-  width: 80px;
+  width: 100px;
   padding: 5px;
-  font-size: 6pt;
+  font-size: 7.5pt;
   line-height: 10px;
   background: #1e1f29;
   color: #FFF;
