--- a/public/css/CategoryFilter.css
+++ b/public/css/CategoryFilter.css
@@ -102,7 +102,9 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-
+.category-item{
+  color: #c50425;
+}
 .checkbox-filter h4:hover {
   background-color: #f0f0f0;
 }
